--- a/_posts/2016-04-10-hello-c4.md
+++ b/_posts/2016-04-10-hello-c4.md
@@ -18,4 +18,6 @@ categories: example
 
 <https://github.com/tnantoka/swift-a-week/tree/gh-pages/works/HelloC4>
 
+※ Carthageだと1.1.0がインストールできなかったので、CocoaPodsを使いました。
+
 
