--- a/_posts/2016-09-16-edhita-2-0-4.md
+++ b/_posts/2016-09-16-edhita-2-0-4.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Swift 2のアプリをSwift 3化するためにやったこと"
-categories: book
+categories: tips
 ---
 
 <https://github.com/tnantoka/edhita> というアプリをXcode 8でBuildして提出しました。
