--- a/_posts/2016-12-18-remaining-2017.md
+++ b/_posts/2016-12-18-remaining-2017.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Remainingというアプリを約1年ぶりにアップデート"
-categories: example
+categories: tips
 ---
 
 <http://remaining.bornneet.com/>
@@ -46,3 +46,4 @@ RealmやBondなどはXcodeに言われるがままに置換したらほぼいけ
 （`.xcworkspace`を開くとPodも対象になって解除するのが面倒なため）
 
 これでWaiting For Reviewにはなったので、後は審査を待つのみです。
+→ その後、無事審査を通過しました。
